# ChangeLog for x11-libs/libSM
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libSM/ChangeLog,v 1.25 2006/04/28 15:16:46 marienz Exp $

  28 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-libSM-1.0.0,
  Manifest:
  Revert to working digest.

  28 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-libSM-1.0.0,
  Manifest:
  Fixing SHA256 digest, pass four

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> libSM-1.0.0.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>; libSM-1.0.0.ebuild:
  (#127306) Digests changed between release candidates and final release for
  the same tarballs.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> libSM-1.0.0.ebuild:
  Mark 1.0.0 ~ia64

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> libSM-1.0.0.ebuild:
  Added ~ppc64

  31 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org> libSM-1.0.0.ebuild:
  Unstable on hppa.

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -libSM-0.99.3.ebuild:
  Pull old versions.

  26 Dec 2005; Stefaan De Roeck <stefaan@gentoo.org> libSM-1.0.0.ebuild:
  Marked ~alpha

*libSM-1.0.0 (17 Dec 2005)

  17 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +libSM-1.0.0.ebuild:
  Bump for 7.0RC4.

  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -libSM-0.99.1-r1.ebuild, -libSM-0.99.2.ebuild:
  Pull old versions.

*libSM-0.99.3 (04 Dec 2005)

  04 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +libSM-0.99.3.ebuild:
  Bump for 7.0RC3.

*libSM-0.99.2 (11 Nov 2005)

  11 Nov 2005; Donnie Berkholz <spyderous@gentoo.org>; +libSM-0.99.2.ebuild:
  Bump for 7.0RC2.

  04 Nov 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -libSM-0.99.0.ebuild, -libSM-0.99.1.ebuild:
  Drop old versions.

  30 Oct 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  libSM-0.99.1-r1.ebuild:
  Move xproto dep to reflect compile-time requirements.

*libSM-0.99.1-r1 (27 Oct 2005)
