@@ -1,0 +1,3 @@
+MD5 f15315b5ed2fde4dc6688ef004a34e8a libSM-1.0.1.tar.bz2 240562
+RMD160 a19521e6c7d1fc02ab72eaea46e122d61afa47ed libSM-1.0.1.tar.bz2 240562
+SHA256 3ef4c86e02695fb3a9aeadc03e1e7e48ef9b92f118ecf47adac8d7a041cd0770 libSM-1.0.1.tar.bz2 240562
