@@ -1,6 +1,13 @@
 # ChangeLog for x11-libs/libSM
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libSM/ChangeLog,v 1.25 2006/04/28 15:16:46 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libSM/ChangeLog,v 1.26 2006/04/29 15:22:14 joshuabaergen Exp $
+
+*libSM-1.0.1 (29 Apr 2006)
+
+  29 Apr 2006; Joshua Baergen <joshuabaergen@gentoo.org>
+  +libSM-1.0.1.ebuild:
+  Version bump.  Fixes functions not returning what they said they would in some
+  cases.
 
   28 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-libSM-1.0.0,
   Manifest:
